// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`moderationList ignores invalid fields, and only returns verifiedSpaces 1`] = `
{
  "verifiedSpaces": {
    "space1.eth": 1,
    "space2.eth": 2,
  },
}
`;

exports[`moderationList returns all fields by default 1`] = `
{
  "flaggedLinks": [
    "https://gogle.com",
    "https://facebook.com",
  ],
  "flaggedProposalIds": [
    "0x1",
    "0x2",
  ],
  "verifiedSpaces": {
    "space1.eth": 1,
    "space2.eth": 2,
  },
}
`;

exports[`moderationList returns multiple list: flaggedLinks and verifiedSpaces 1`] = `
{
  "flaggedLinks": [
    "https://gogle.com",
    "https://facebook.com",
  ],
  "verifiedSpaces": {
    "space1.eth": 1,
    "space2.eth": 2,
  },
}
`;

exports[`moderationList returns only the flaggedLinks 1`] = `
{
  "flaggedLinks": [
    "https://gogle.com",
    "https://facebook.com",
  ],
}
`;

exports[`moderationList returns only the flaggedProposalIds 1`] = `
{
  "flaggedProposalIds": [
    "0x1",
    "0x2",
  ],
}
`;

exports[`moderationList returns only the verifiedSpaces 1`] = `
{
  "verifiedSpaces": {
    "space1.eth": 1,
    "space2.eth": 2,
  },
}
`;
